<resources>
    <string name="app_name">IEEE-754 Converter</string>

    <string name="hello_world">Hello world!</string>
    <string name="about">About</string>
    <string name="enter_number">Enter a decimal number (e.g. 100, 1.4)</string>
    <string name="x32">32-bit</string>
    <string name="x64">64-bit</string>
    <string name="reset">Reset</string>

    <string name="breakdown">Breakdown</string>
    <string name="sign">Sign</string>
    <string name="exponent">Exponent</string>
    <string name="mantissa">Mantissa</string>

    <string name="representation">Representation</string>
    <string name="binary">Binary</string>
    <string name="decimal">Decimal</string>
    <string name="hex">Hex</string>

    <string name="about_message">&#169; 2015 Ian Macalinao. Released under the MIT license.\n\nGitHub:\nhttps://github.com/simplyianm/IEEE754Converter\n\nFeedback:\nme@ian.pw</string>
    <string name="ok">Coolbeans</string>
</resources>
